build the list components.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-   <span class="badge badge--secondary badge--small">10% Off</span>
+    <ul class="item list--tick">
+        <li class="list--item">item 1</li>
+        <li class="list--item">item 2</li>
+        <li class="list--item">item 3</li>
+    </ul>
 </body>
+
 </html>
