--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <ul class="item list--tick">
-        <li class="list--item">item 1</li>
-        <li class="list--item">item 2</li>
-        <li class="list--item">item 3</li>
-    </ul>
+    <span class="icon-container">
+        <svg class="icon icon--primary">
+            <use xlink:href="images/sprite.svg#wordpress"></use>
+        </svg>
+    </span>
 </body>
 
 </html>
