--- a/index.html
+++ b/index.html
@@ -12,19 +12,25 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<div class="media">
-    <div class="media__image">
-        <svg class="icon icon--primary">
-            <use xlink:href="images/sprite.svg#wordpress"></use>
-        </svg>
-    </div>
-    <div class="media__body">
-        <h3 class="media__title">Easy Start & Managed Updates </h3>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid temporibus et distinctio
-             enim porro fugiat iste sequi 
-             officiis delectus esse?
-        </p>
-    </div>
+<blockquote class="quote">
+    <p class="quote__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores maiores pariatur 
+        quam doloremque optio molestiae aliquid
+        eligendi earum animi deleniti.
+    </p>
+    <footer>
+        <div class="media">
+            <div class="media__image">
+                <svg class="icon icon--primary quote__line">
+                    <use xlink:href="images/sprite.svg#line"></use>
+                </svg>
+            </div>
+            <div class="media__body">
+                <h3 class="media__title quote__author">Solomon Offor </h3>
+                <p class="quote__organisation">Norland Int. </p>
+            </div>
+        </div>
+    </footer>
+</blockquote>
 </div>
 </body>
 </html>
