--- a/index.html
+++ b/index.html
@@ -12,25 +12,9 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<blockquote class="quote">
-    <p class="quote__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores maiores pariatur 
-        quam doloremque optio molestiae aliquid
-        eligendi earum animi deleniti.
-    </p>
-    <footer>
-        <div class="media">
-            <div class="media__image">
-                <svg class="icon icon--primary quote__line">
-                    <use xlink:href="images/sprite.svg#line"></use>
-                </svg>
-            </div>
-            <div class="media__body">
-                <h3 class="media__title quote__author">Solomon Offor </h3>
-                <p class="quote__organisation">Norland Int. </p>
-            </div>
-        </div>
-    </footer>
-</blockquote>
-</div>
+    <div class="grid grid--1x2">
+        <div style="height: 100px; background: gold"></div>
+        <div style="height: 100px; background: dodgerblue"></div>
+    </div>
 </body>
 </html>
