--- a/index.html
+++ b/index.html
@@ -12,17 +12,30 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class="callout callout--primary">
-        <div class="grid grid--1x2">
-            <div class="callout__content">
-                <h2 class="callout__heading">Ready to Get Started?</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                     Magnam asperiores aperiam consequuntur cupiditate! Consectetur,
-                    voluptas tempore enim culpa eligendi quasi.
-                </p>
-            </div>
-            <a href="" class="btn btn--secondary btn__stretched">Get Started</a>
+    <div class="collapsible collapsible--expanded">
+        <header class="collapsible__header">
+            <h2 class="collapsible__heading">Item 1</h2>
+        <svg class="icon icon--white collapsible__line">
+            <use xlink:href="images/sprite.svg#line"></use>
+        </svg>
+        </header>
+        <div class="collapsible__content">
+            Lorem, ipsum dolor sit amet consectetur
+             adipisicing elit. Quaerat, sunt!
         </div>
     </div>
+    <div class="collapsible collapsible--expanded">
+        <header class="collapsible__header">
+            <h2 class="collapsible__heading">Item 1</h2>
+        <svg class="icon icon--white collapsible__line">
+            <use xlink:href="images/sprite.svg#line"></use>
+        </svg>
+        </header>
+        <div class="collapsible__content">
+            Lorem, ipsum dolor sit amet consectetur
+             adipisicing elit. Quaerat, sunt!
+        </div>
+    </div>
+    <script src="main.js"></script>
 </body>
 </html>
