build the block components.

--- a/index.html
+++ b/index.html
@@ -12,30 +12,32 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <div class="collapsible collapsible--expanded">
-        <header class="collapsible__header">
-            <h2 class="collapsible__heading">Item 1</h2>
-        <svg class="icon icon--white collapsible__line">
-            <use xlink:href="images/sprite.svg#line"></use>
-        </svg>
-        </header>
-        <div class="collapsible__content">
-            Lorem, ipsum dolor sit amet consectetur
-             adipisicing elit. Quaerat, sunt!
+    <header class="block__header">
+        <section class="block container">
+            <h2 class="block__heading">Heading</h2>
+            <p>Lorem ipsum dolor sit amet consectetur
+               adipisicing elit. Sint, fugiat!
+            </p>
+        
+    </header>
+    <div style="width: 30%; padding: 4rem;">
+        <div class="card card--secondary">
+         <header class="card__header">Card Title</header>
+         <div class="card__body">
+             Lorem ipsum dolor sit amet
+             consectetur adipisicing elit. A, minima!
+         </div>
         </div>
-    </div>
-    <div class="collapsible collapsible--expanded">
-        <header class="collapsible__header">
-            <h2 class="collapsible__heading">Item 1</h2>
-        <svg class="icon icon--white collapsible__line">
-            <use xlink:href="images/sprite.svg#line"></use>
-        </svg>
-        </header>
-        <div class="collapsible__content">
-            Lorem, ipsum dolor sit amet consectetur
-             adipisicing elit. Quaerat, sunt!
+ </div>
+    </section>
+    <section class="block block--dark block--skewed-left">
+        <div class="container">
+            <h2 class="block__heading">Heading</h2>
+            <p>Lorem ipsum dolor sit amet consectetur
+                adipisicing elit. Sint, fugiat!
+            </p>
         </div>
-    </div>
+    </section>
     <script src="main.js"></script>
-</body>
+   </body>
 </html>
