--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
     </div>
    </section>
    <!-- callout block -->
-   <div class="callout callout--primary">
+   <div class="callout callout--primary" data-aos="zoom-out">
     <div class="grid grid--1x2">
         <div class="callout__content">
             <h2 class="callout__heading">Ready to Get Started?</h2>
