add an animation to my button in the callout block.

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
     </div>
    </section>
    <!-- callout block -->
-   <div class="callout callout--primary" data-aos="zoom-out">
+   <div class="callout callout--primary">
     <div class="grid grid--1x2">
         <div class="callout__content">
             <h2 class="callout__heading">Ready to Get Started?</h2>
@@ -347,7 +347,7 @@
                 voluptas tempore enim culpa eligendi quasi.
             </p>
         </div>
-        <a href="" class="btn btn--secondary btn__stretched">Get Started</a>
+        <a href="" class="btn btn--secondary btn__stretched" data-aos="zoom-out">Get Started</a>
     </div>
  </div>
  <!-- footer block -->
