removed an animation from some of my feature-block

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 </div>
 <div class="block container">
     <article class="grid grid--1x2 feature">
-      <div  data-aos="slide-right">
+      <div>
           <span class="icon-container">
               <svg class="icon icon--primary">
                   <use href="images/sprite.svg#wordpress"></use>
@@ -211,7 +211,7 @@
 </div>
 <div class="block container">
     <article class="grid grid--1x2 feature">
-      <div class="feature__content"  data-aos="slide-left">
+      <div class="feature__content">
           <span class="icon-container">
               <svg class="icon icon--primary">
                   <use href="images/sprite.svg#settings"></use>
