--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
-<body>
+<body data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0">
   <header>
     <!-- nav block -->
     <nav class="nav collapsible">
@@ -165,7 +165,7 @@
 </div>
 <div class="block container">
     <article class="grid grid--1x2 feature">
-      <div class="feature__content" data-aos="fade-right">
+      <div class="feature__content" data-aos="fade-up">
           <span class="icon-container">
               <svg class="icon icon--primary">
                   <use href="images/sprite.svg#computer"></use>
