--- a/playground.html
+++ b/playground.html
@@ -12,27 +12,45 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <section class="block container block-domain">
+    <section class="block">
         <header class="block__header">
-            <h2>Starting at $10 per month</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum, optio.</p>
+            <h2>What Our Customers are Saying</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, repellendus.</p>
         </header>
-        <div class="input-group">
-            <input type="text" class="input" placeholder="Enter domain name here...">
-            <button class="btn btn--accent">
-                <svg class="icon icon--white">
-                    <use xlink:href="images/sprite.svg#search"></use>
-                </svg>
-            Search</button> 
-       </div>
-        <ul class="list block-domain__prices">
-            <li><span class="badge badge--secondary">.com $9</span></li>
-            <li>.sg $10</li>
-            <li>.space $11</li>
-            <li>.info $14</li>
-            <li>.net $10</li>
-            <li>.xyz $10</li>
-        </ul>
+        <div class="container">
+            <div class="card testimonial" >
+                <div class="grid grid--1x2">
+                    <div class="testimonial__image">
+                        <img  src="images/testimonial.jpg" alt="a happy smiling customer">
+                     <span class="icon-container icon-container--accent">
+                        <svg class="icon icon--white icon--small">
+                         <use xlink:href="images/sprite.svg#quotes"></use>
+                       </svg>
+                     </span>
+                    </div>
+                    
+        <blockquote class="quote">
+              <p class="quote__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores maiores pariatur 
+                 quam doloremque optio molestiae aliquid
+                 eligendi earum animi deleniti.
+             </p>
+             <footer>
+                 <div class="media">
+                     <div class="media__image">
+                         <svg class="icon icon--primary quote__line">
+                             <use xlink:href="images/sprite.svg#line"></use>
+                         </svg>
+                     </div>
+                     <div class="media__body">
+                         <h3 class="media__title quote__author">Solomon Offor </h3>
+                         <p class="quote__organisation">Norland Int. </p>
+                     </div>
+                 </div>
+             </foote>
+         </blockquote>
+                </div>
+            </div>
+        </div>
        </section>
 </body>
 </html>
